avancement de la show
Signed-off-by: Xavier Le Faou <lefaoux@hotmail.fr>

--- a/app/assets/stylesheets/components/_card-show_pokemon.scss
+++ b/app/assets/stylesheets/components/_card-show_pokemon.scss
@@ -53,3 +53,29 @@
   color: rgb(255, 255, 255);
   font-size: 20px;
 }
+
+.bookings-grid{
+  margin: 20px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+}
+
+.booking {
+  padding: 10px;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: black double 3px;
+  box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.4);
+  border-radius: 18px;
+  width: 250px;
+  margin: 10px;
+  background: rgba( 255, 255, 255, 0.15 );
+  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+  backdrop-filter: blur( 5.5px );
+  -webkit-backdrop-filter: blur( 5.5px );
+  border-radius: 10px;
+}
