--- a/app/views/pokemons/_accueil.html.erb
+++ b/app/views/pokemons/_accueil.html.erb
@@ -30,8 +30,8 @@
         </div>
         <div class="py-5 order-last order-lg-first col-xl-6 col-sm-12">
           <h1>Rondoudou</h1>
-          <p class="mb-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores, inventore itaque fugit pariatur earum ut sequi corrupti adipisci exercitationem labore nihil rerum hic incidunt quasi quod odit odio nulla dolorem!
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque enim eius itaque quis molestiae amet ab facere culpa! Autem laboriosam quod amet esse explicabo velit sed vel voluptas laborum illum!
+          <p class="mb-3">Rondoudou ressemble à une boule rose avec de petits bras et de petits pieds. Il possède deux petites oreilles en pointe roses et noires à l'intérieur. Il a également une épaisse mèche qui retombe entre deux grands yeux bleus qui lui donnent un air tendre.
+Rondoudou possède une voix mélodieuse et adore chanter. Il est notamment réputé pour ses berceuses, qui provoquent le sommeil de tout individu ou Pokémon qui les entendent. Il est également capable de guérir les blessures de ses alliés en chantant. Il est très apprécié des enfants et des bébés Pokémon.</p>
           </p>
           <a href="#ancres" class="button-primary w-100">
             Explorer
