design new pokemon
Signed-off-by: emma puget <puget.emma@gmail.com>

--- a/app/assets/stylesheets/components/_cards_pokemons.scss
+++ b/app/assets/stylesheets/components/_cards_pokemons.scss
@@ -5,6 +5,13 @@
   margin-bottom: 50px;
 }
 
+.cardspokemon-new {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
+  margin-bottom: 50px;
+}
+
 .containernour {
   text-align: -webkit-center;
   justify-content: center;
