--- a/app/views/pokemons/_pokemon_card_newview.html.erb
+++ b/app/views/pokemons/_pokemon_card_newview.html.erb
@@ -1,4 +1,4 @@
-<div class="cardspokemon">
+<div class="cardspokemon-new">
   <% @pokemons.each do |pokemon| %>
     <div class="cardpokemon">
       <div class="card rounded-4 <%=pokemon.type_pokemon.downcase.gsub('é','e') %>" style="width: 18rem;">
@@ -9,8 +9,8 @@
           <p class="card-text"><%= pokemon.price %>€/day</p>
         </div>
         <%= link_to pokemon_path(pokemon), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" } do %>
-          <div class="service">
-            <i class="fa-solid fa-xmark btn-remove-pokemon position-absolute" style="color: black;"></i>
+          <div class="fs-4 opacity-75">
+            <i class="fa-solid fa-xmark btn-remove-pokemon" style="color: black;"></i>
           </div>
         <% end %>
       </div>
