--- a/app/assets/stylesheets/components/_payment.scss
+++ b/app/assets/stylesheets/components/_payment.scss
@@ -104,7 +104,7 @@
     color: #fff;
     margin-top: 20px;
     cursor: pointer;
-
+    text-decoration: none;
     @media screen and (max-width: 480px) {
       margin-top: 10px;
     }
