modif new pokemon page
Signed-off-by: emma puget <puget.emma@gmail.com>

--- a/app/views/pokemons/new.html.erb
+++ b/app/views/pokemons/new.html.erb
@@ -1,7 +1,5 @@
   <%= link_to pokemons_path do %>
-    <div class="fs-2 opacity-75 p-5">
-      <i class="fa-solid fa-arrow-left btn-back-index" style="color: black;"></i>
-    </div>
+      <i class="fa-solid fa-arrow-left btn-back-index fs-2 p-4" style="color: black;"></i>
   <% end %>
 <div class="container">
   <h1 class="text-center pb-5 title-new-pokemon">Vos pokemons</h1>
