--- a/app/views/bookings/_payment.html.erb
+++ b/app/views/bookings/_payment.html.erb
@@ -153,7 +153,7 @@
 
         <button class="card-form__button" >
 
-         <%= link_to 'Payer', root_path, method: :get, style: "text-decoration: none; color:white" %>
+         <%= link_to 'Payer', pokemons_path(), method: :get, style: "text-decoration: none; color:white" %>
         </button>
       </div>
     </div>
