grille page show
Signed-off-by: Xavier Le Faou <lefaoux@hotmail.fr>

--- a/app/assets/stylesheets/components/_card-show_pokemon.scss
+++ b/app/assets/stylesheets/components/_card-show_pokemon.scss
@@ -79,3 +79,11 @@
   -webkit-backdrop-filter: blur( 5.5px );
   border-radius: 10px;
 }
+
+.hero{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  place-content: space-evenly;
+  margin-top: 50px;
+}
