--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -7,6 +7,6 @@
     <%= link_to 'Retour', pokemons_path%>
   <% end %>
   <div data-payment-target="payments" style="display: none;">
-  <%= render 'payment' %>
+  <%= render 'bookings/payment' %>
   </div>
 </div>
