--- a/app/views/pokemons/_accueil.html.erb
+++ b/app/views/pokemons/_accueil.html.erb
@@ -5,10 +5,10 @@
       <div style="display: flex; justify-content: flex-end; align-items: center;">
         <div>
           <% if user_signed_in? %>
-            <%= link_to 'Déconnexion', destroy_user_session_path, data: { turbo_method: :delete }, class: 'btn btn-primary mx-2' %>
+            <%= link_to 'Déconnexion', destroy_user_session_path, data: { turbo_method: :delete }, class: 'btn btn-outline-dark mx-2' %>
           <% else %>
-            <%= link_to 'Inscription', new_user_registration_path, class: 'btn btn-primary mx-2' %>
-            <%= link_to 'Connexion', new_user_session_path, class: 'btn btn-primary mx-2' %>
+            <%= link_to 'Inscription', new_user_registration_path, class: 'btn btn-outline-dark mx-2' %>
+            <%= link_to 'Connexion', new_user_session_path, class: 'btn btn-secondary mx-2 border border-dark-subtle' %>
           <% end %>
         </div>
       </div>
