--- a/app/assets/stylesheets/components/_card-show_pokemon.scss
+++ b/app/assets/stylesheets/components/_card-show_pokemon.scss
@@ -12,10 +12,11 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  border: double 5px;
+  border: rgba(0, 0, 0, 0.363) double 25px !important;
   box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.4);
   border-radius: 18px;
   width: 450px;
+
 }
 
 .card-show img {
@@ -59,6 +60,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 10px;
+  justify-items: center;
 }
 
 .booking {
