--- a/app/assets/stylesheets/components/_cards_pokemons.scss
+++ b/app/assets/stylesheets/components/_cards_pokemons.scss
@@ -21,6 +21,7 @@
   animation: mymove 5s infinite;
   box-shadow: 5px 5px 0.1 rgba(0, 0, 0, 0.143);
   max-height: 400px;
+  border: rgba(0, 0, 0, 0.363) double 25px !important ;
   p {
     text-decoration: none;
   }
